# flatflow

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.rst  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  setup.py
chronica/: README.rst  go.mod  go.sum
chronica/cmd/: main.go
chronica/rpc/: __init__.py
chronica/scheduler/: sample.go  scheduler.go  scheduler.proto  scheduler_grpc.go  scheduler_grpc_test.go  scheduler_test.go  worker.go
chronica/sys/: __init__.py  sysmodule.py
cmake/: utils.cmake
cmd/: main.go
communicator/: communicator.go  communicator.pb.go  communicator_grpc.pb.go  communicator_test.go
experiments/: Dockerfile  README.md  init.sh
experiments/init/: init.sh  megatron_gpt_finetuning.py  megatron_gpt_finetuning_config.yaml
experiments/step0_preparation/: attention.diff  prepare_data_alpaca.sh  prepare_data_dolly.sh  prepare_data_pretrain.sh  prepare_data_quality.sh  prepare_model.sh
experiments/step1_training/: run_pretrain_multi_nodes_2405.sh  run_train_multi_nodes_2405.sh  run_train_multi_nodes_2409.sh
experiments/step2_evaluation/: run_eval.sh
flatflow/: CMakeLists.txt  __init__.py  ffi.pyi  pybind.cc  types.h
flatflow/abseil/: btree_map.h
flatflow/aten/: generator.h
flatflow/aten/native/: attention.cu  attention.h
flatflow/base/: attributes.h  config.h.in  types.h
flatflow/data/: CMakeLists.txt  dataset.h  dataset_test.cc  dataset_test.fbs  dataset_test.h  dataset_test_generated.h  types.h
flatflow/data/internal/: types.h
flatflow/data/internal/container/: btree_map.h
flatflow/examples/nemo/nlp/language_modeling/tuning/: megatron_gpt_finetuning.py
flatflow/kernel/: splitAttention.cu  split_attention.cu  utils.cuh
flatflow/megatron/: __init__.py  gpt_dataset.py
flatflow/megatron/core/: __init__.py  parallel_state.py
flatflow/megatron/core/bpipe/: bpipe_state.py
flatflow/megatron/core/pipeline_parallel/: schedules.py
flatflow/megatron/energon/: __init__.py
flatflow/megatron/energon/task_encoder/: __init__.py  megatron.py
flatflow/nemo/collections/common/metrics/: __init__.py  perf_metrics.py
flatflow/nemo/collections/nlp/data/language_modeling/megatron/: __init__.py  blendable_dataset.py  data_sampler.py  data_samplers.py  gpt_dataset.py  gpt_sft_chat_dataset.py  gpt_sft_dataset.py  megatron_batch_samplers.py  obfd_dataset.py
flatflow/nemo/collections/nlp/models/language_modeling/: __init__.py  megatron_base_model.py  megatron_gpt_model.py  megatron_gpt_sft_model.py
flatflow/nemo/collections/nlp/modules/common/megatron/: megatron_init.py
flatflow/nemo/collections/nlp/parts/: megatron_trainer_builder.py  nlp_overrides.py
flatflow/nemo/core/classes/: __init__.py  dataset.py
flatflow/nemo/examples/nlp/language_modeling/tuning/: megatron_gpt_finetuning.py
flatflow/nemo/examples/nlp/language_modeling/tuning/conf/: megatron_gpt_finetuning_config.yaml
flatflow/nemo/nemo/collections/nlp/models/language_modeling/: megatron_gpt_sft_model.py
flatflow/nemo/nemo/collections/nlp/modules/common/megatron/: attention.py
flatflow/ops/: __init__.py  adaptors.h  dtype.fbs  graph.fbs  graph_generated.diff  node.fbs  node_generated.diff  operator.fbs  ops.h  ops.py  promote_types.h  scalar_type.fbs
flatflow/ops/internal/: polynomial.h
flatflow/rpc/: CMakeLists.txt  __init__.py  client.py  communicator.fbs  communicator.grpc.fb.cc  communicator.grpc.fb.h  communicator.h  communicator.py  communicator_generated.h  controlplane.fbs  controlplane.h  controlplane.py  distributed.h  empty.fbs  empty_generated.h  nanobind.cc  pybind.cc  runner.cc
flatflow/scheduler/: CMakeLists.txt  __init__.py  profiler.py  scheduler.h  scheduler_test.cc  scheduler_test.fbs  scheduler_test.h  scheduler_test_generated.h
flatflow/scheduler/internal/: concat.h  extract.h  partition.h  reshape.h  scatter.h  shuffle.h
flatflow/scheduler/internal/algorithm/: CMakeLists.txt  concat.h  extract.h  extract_test.cc  partition.h  partition_test.cc  passive_aggressive.h  passive_aggressive_test.cc  regression.h  regression_test.cc  reshape.h  reshape_test.cc  shuffle.h  shuffle_test.cc
flatflow/sklearn/linear_model/: passive_aggressive.h
flatflow/sys/: __init__.py  sysmodule.py
flatflow/torch/: __init__.py
flatflow/torch/nn/: __init__.py  custom_linear.py  flash_attn_modules.py
flatflow/torch/nn/modules/: __init__.py  attention.cu  attention.h  linear.py
flatflow/torch/profiler/: __init__.py  profiler.py
flatflow/torch/utils/data/: __init__.py  dataloader.py  dataset.py  distributed.py
flatflow/torch/utils/data/_utils/: __init__.py  collate.py
internal/btree/: btree.go  btree_mem.go  btree_test.go  item.go
internal/data/: dataset.go  dataset_test.go  sample.go
models/modules/: flash_attn_modules.py
proto/: communicator.proto  scheduler.proto
python/: Makefile
scheduler/: scheduler.go  scheduler.pb.go  scheduler.proto  scheduler_grpc.go  scheduler_grpc.pb.go  scheduler_grpc_test.go  scheduler_test.go
scripts/: README.md  preprocess_data_for_megatron.py  preprocess_data_for_megatron_pretraining.py
scripts/nemo/: README.md  preprocess_data_for_megatron.py  requirements.txt
src/: lib.rs  ops.rs  sched.rs
test/: CMakeLists.txt  vesrion_test.cc
tests/: CMakeLists.txt  test_cnn.py  test_flash_attn.py
tests/data/: CMakeLists.txt  dataset_test.cc  dataset_test.fbs
tests/ops/: CMakeLists.txt  adaptors_test.cc  gemma3_ops_test.cc  gpt3_ops_test.cc  llama3_ops_test.cc  mistral3_ops_test.cc  ops_test.cc  opt_ops_test.cc  phi4_ops_test.cc  promote_types_test.cc  qwen3_ops_test.cc
tests/ops/internal/: CMakeLists.txt  polynomial_test.cc
tests/scheduler/: CMakeLists.txt  scheduler_test.cc
tests/scheduler/internal/: CMakeLists.txt  concat_test.cc  extract_test.cc  partition_test.cc  reshape_test.cc  scatter_test.cc  shuffle_test.cc
tests/scheduler/internal/algorithm/: CMakeLists.txt  concat_test.cc  extract_test.cc  partition_test.cc  passive_aggressive_test.cc  reshape_test.cc  shuffle_test.cc
(+62 files in other folders)
