[package]
name = "flatflow"
version = "0.0.63"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
flatbuffers = "25.12.19"
log = "0.4.0"
numpy = "0.29.0"
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
pyo3-log = "0.13.0"
rayon = "1.12.0"
scopeguard = "1.2.0"

[dev-dependencies]
rand = "0.10.0"
rand_distr = "0.6.0"
