[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.ruff]
extend-exclude = ["third_party"]
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
extend-ignore = [
  "C901",
  "E731",
  "E741",
  "F403",
  "F405",
  "F841",
]
extend-select = [
  "C",
  "E",
  "I",
  "W",
]

[tool.ruff.lint.isort]
known-local-folder = ["flatflow"]

[tool.ruff.lint.pydocstyle]
convention = "google"
