[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "flatflow"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "flatbuffers==25.12.19",
  "numpy",
  "torch>=2.7.0",
]
dynamic = [
  "version",
  "authors",
  "description",
  "description_content_type",
  "readme",
  "license",
  "urls",
]

[tool.maturin]
module-name = "flatflow.ffi"

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
extend-ignore = [
  "C901",
  "E731",
  "E741",
  "F403",
  "F405",
  "F841",
]
extend-select = [
  "C",
  "E",
  "I",
  "W",
]

[tool.ruff.lint.isort]
known-local-folder = ["flatflow"]
